force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Attachments_Ids__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Attachments_Ids__c</fullName>
    <description>Attachments_Ids</description>
    <label>Attachments Ids</label>
    <type>TextArea</type>
</CustomField>