force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Community_Attached_Files_Primary__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Community_Attached_Files_Primary__c</fullName>
    <description>This field is used for showing the attachment for community and it contains the first three attachment files.</description>
    <formula>IF(ISBLANK(tdc_tsw__Attachments_Ids__c), &quot;&quot;,
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(tdc_tsw__Attachments_Ids__c,18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(tdc_tsw__Attachments_Ids__c,31),12),&apos;&apos;))&amp;&quot; &quot;&amp;

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;1,
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),31),12),&apos;&apos;))&amp;&quot; &quot;&amp;

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;2,
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),18),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/ser&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),31),12),&apos;&apos;)),&quot;&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Attached Files Primary</label>
    <type>Text</type>
</CustomField>