force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>