force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__DE_Enable__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__DE_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when provider is Digital Engagement</description>
    <label>DE Enable</label>
    <type>Checkbox</type>
</CustomField>