force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Delivered__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check, if the message is delivered to the customer or not.</description>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>