force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Delivered_SMS__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Delivered_SMS__c</fullName>
    <formula>IMAGE( IF( AND(tdc_tsw__Delivered__c == true, Name == &apos;Outgoing&apos;),LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/tdc_tsw__resource_sms_file/img/imageCheck2.png&apos;,LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/tdc_tsw__resource_sms_file/img/imageCancel1.png&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered SMS</label>
    <type>Text</type>
</CustomField>