force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Delivery_Status__c</fullName>
    <description>This field is used to get the delivery status of the outgoing SMS.
Updated by Disha to add WhatsApp read receipt. for WhatsApp, the delivery status is Sent, Delivered, Read.</description>
    <formula>IF(AND(tdc_tsw__Delivered__c , tdc_tsw__Read__c),&quot;Read&quot;, IF(tdc_tsw__Delivered__c , &quot;Delivered&quot;,If(ISBLANK(tdc_tsw__Error_Code__c), &quot;Sent&quot;, &quot;Undelivered&quot;)))</formula>
    <label>Delivery Status</label>
    <type>Text</type>
</CustomField>