force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>