force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Event_Id__c</fullName>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>