force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__FeedElementId__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__FeedElementId__c</fullName>
    <label>FeedElementId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>