force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Incoming_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Incoming_Status__c</fullName>
    <formula>IF(tdc_tsw__Read__c , &quot;Read&quot;, &quot;Not Read&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status of Incoming Messages</label>
    <type>Text</type>
</CustomField>