force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Is_Keyword_Based__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Is_Keyword_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Keyword Based</label>
    <type>Checkbox</type>
</CustomField>