force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__isCaseCreated__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__isCaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCaseCreated</label>
    <type>Checkbox</type>
</CustomField>