force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Last_Click__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Last_Click__c</fullName>
    <label>Last Click</label>
    <length>255</length>
    <type>Text</type>
</CustomField>