force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Lead__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>