force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Message__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS History</label>
    <referenceTo>tdc_tsw__Message__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>Message</relationshipName>
    <type>Lookup</type>
</CustomField>