force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Message_Segment__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message_Segment__c</fullName>
    <label>Message Segment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>