force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Message_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message_Time__c</fullName>
    <description>This field displays the actual SMS sent/received time.</description>
    <label>Message Time</label>
    <type>DateTime</type>
</CustomField>