force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Messaging_PlatformKey__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Messaging_PlatformKey__c</fullName>
    <description>This Field is Used to save toNumber key and used in digital engagement</description>
    <label>Messaging Platform Key</label>
    <type>Phone</type>
</CustomField>