force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Messenger_User_ID__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Messenger_User_ID__c</fullName>
    <label>FB Messenger User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>