force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Number_Of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Number_Of_Attachments__c</fullName>
    <label>Number Of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>