force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Read__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read ?</label>
    <type>Checkbox</type>
</CustomField>