force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Read_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Read_Status__c</fullName>
    <formula>IF( tdc_tsw__Read__c = true, &quot;Read&quot;, &quot;Unread&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Read Status</label>
    <type>Text</type>
</CustomField>