force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Related_Incoming_Owner__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_Incoming_Owner__c</fullName>
    <description>Used for Incoming SMS Owner</description>
    <label>Related Incoming Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outgoing Owner</fullName>
            </value>
            <value>
                <fullName>Parent Record Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>