force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_Object__c</fullName>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>