force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Related_Object_Id_URL__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_Object_Id_URL__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;   tdc_tsw__Related_Object_Id__c  ,  tdc_tsw__Sender_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>