force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Reply_Code__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Reply_Code__c</fullName>
    <description>In case of auto forward to user phone, user use this reply code while replying for the particular SMS.</description>
    <label>Reply Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>