force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>