force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Sender_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sender_Number__c</fullName>
    <label>Sender Number</label>
    <type>Phone</type>
</CustomField>