force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Short_Text__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Short_Text__c</fullName>
    <label>Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>