force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Source__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>