force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Survey_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response</label>
    <referenceTo>tdc_tsw__Survey_Response__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>