force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Task_Created__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Created</label>
    <type>Checkbox</type>
</CustomField>