force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Template_Parse_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Template_Parse_Id__c</fullName>
    <label>Template Parse Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>