force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__ToNumber__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__ToNumber__c</fullName>
    <label>To Number</label>
    <type>Phone</type>
</CustomField>