force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw_Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw_Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>