force-app/main/default/objects/tdc_tsw__Message__c/recordTypes/tdc_tsw__Incoming.recordType-meta.xml
<RecordType>
    <fullName>tdc_tsw__Incoming</fullName>
    <active>true</active>
    <label>Incoming</label>
</RecordType>