force-app/main/default/objects/tdc_tsw__Message__c/recordTypes/tdc_tsw__Outgoing.recordType-meta.xml
<RecordType>
    <fullName>tdc_tsw__Outgoing</fullName>
    <active>true</active>
    <label>Outgoing</label>
</RecordType>