force-app/main/default/objects/tdc_tsw__Message__c/recordTypes/tdc_tsw__VoiceMail.recordType-meta.xml
<RecordType>
    <fullName>tdc_tsw__VoiceMail</fullName>
    <active>true</active>
    <label>VoiceMail</label>
</RecordType>