force-app/main/default/objects/tdc_tsw__Message__c/listViews/tdc_tsw__All.listView-meta.xml
<ListView>
    <fullName>tdc_tsw__All</fullName>
    <columns>NAME</columns>
    <columns>tdc_tsw__Created_Date__c</columns>
    <columns>tdc_tsw__Related_Object_Id_URL__c</columns>
    <columns>tdc_tsw__Message_Text_New__c</columns>
    <columns>tdc_tsw__ToNumber__c</columns>
    <columns>tdc_tsw__Sender_Number__c</columns>
    <columns>tdc_tsw__Read_Status__c</columns>
    <columns>tdc_tsw__Read__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>